Add description/feature and update page/logo name.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <title>Products Page</title>
     </head>
     <body>
         <nav class="navbar">
-            <div class="logo"><h1>Products Page</h1></div>
+            <div class="logo"><h1>Ethereal Elegance</h1></div>
             <ul class="menu">
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">New Arrivals</a></li>
@@ -27,8 +26,8 @@
         </nav>
 
         <section class="content">
-            <h1>New Arrivals</h1>
-            <p>Get the Latest Fashion Arrivals</p>
+            <h1>Where Fashion Meets Dreams</h1>
+            <p>Our designs encourage wearers to channel their inner muse and wear their stories with pride.</p>
             <button>Buy Now</button>
         </section>
 
